# fastapi_service

./: .gitignore  Dockerfile  Makefile  README.md  env_example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-tests.yml
inside/: __main__.py  app.py  crud.py  database.py  db_models.py  model.py  schemas.py
inside/auth/: auth_bearer.py  auth_handler.py
tests/: conftest.py  test_messages.py  test_user.py
