[tool.poetry]
name = "inside"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
PyJWT = "^2.7.0"
python-decouple = "^3.8"
SQLAlchemy = "^2.0.27"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.3.0"
isort = "^5.13.2"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
