[tool.poetry]
name = "inside"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
PyJWT = "^2.7.0"
python-decouple = "^3.8"
SQLAlchemy = "^2.0.29"
bcrypt = "^4.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
isort = "^5.13.2"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
